# SIFT-in-PyTorch

./: LICENSE  LICENSE.txt  README.ipynb  README.md  convert_notebook.sh  example.py  jit_ransac.py  mypy.ini  notebook.ipynb  pyproject.toml  requirements.txt  setup.py  sift.py  torchsift.py  tox.ini  utils.py
.github/workflows/: python-publish.yml
dev/: utils.py
src/torchsift/: __init__.py  ransac.py  sift.py
src/torchsift/ransac/: convert.py  matcher.py  metric.py  proj.py  ransac.py  solver.py
torchsift/: __init__.py  ransac.py  sift.py  utils.py
